[package]
name = "echo-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25.0", features = ["latest"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
schemars = "0.8" #"1.0.4"
tracing-subscriber = "0.3.0"
futures = "0.3.31"

